cmake_minimum_required(VERSION 3.5)
project(libcamera)

set(libcamera_MAJOR_VERSION 0)
set(libcamera_MINOR_VERSION 0)
set(libcamera_PATCH_VERSION 0)
set(libcamera_VERSION
  ${libcamera_MAJOR_VERSION}.${libcamera_MINOR_VERSION}.${libcamera_PATCH_VERSION})

# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)
