<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libcamera</name>
  <version>0.0.0</version>
  <description>CMake wrapper for libcamera</description>
  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>
  <license>LGPL-2.1</license>

  <url>https://libcamera.org</url>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>meson</buildtool_depend>

  <build_depend>git</build_depend>
  <build_depend>python3-yaml</build_depend>
  <build_depend>python3-ply</build_depend>
  <build_depend>python3-jinja2</build_depend>

  <depend>libgnutls28-dev</depend>
  <depend>openssl</depend>
  <depend>boost</depend>
  <depend>libudev-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
