<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libcamera</name>

  <version>0.0.4</version>

  <description>An open source camera stack and framework for Linux, Android, and ChromeOS</description>

  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>

  <license>LGPL-2.1</license>

  <url>https://libcamera.org</url>

  <author email="libcamera-devel@lists.libcamera.org">libcamera project</author>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>meson</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <build_depend>git</build_depend>
  <build_depend>python3-yaml</build_depend>
  <build_depend>python3-ply</build_depend>
  <build_depend>python3-jinja2</build_depend>
  <build_depend>openssl</build_depend>

  <depend>yaml</depend>
  <depend>libssl-dev</depend>
  <depend>libudev-dev</depend>

  <!-- workaround for https://bugs.libcamera.org/show_bug.cgi?id=189 -->
  <depend>libatomic</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
